--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,4 +1,4 @@
-<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?ipxfcamf#1" target="_blank">首页</a> | <a href="https://d12gl57lrewmhb.cloudfront.net/1?yqixu" target="_blank">动态网</a> | <a href="https://d2jsgnf2snq1t5.cloudfront.net/2?fbtpecm" target="_blank">大纪元</a> | <a href="https://d2zvse34bag8ol.cloudfront.net/4?kelrhd" target="_blank">看中国</a> | <a href="https://d2axefeaz3j87r.cloudfront.net/pHh5q?gpwxqmd" target="_blank">新生网</a> | <a href="https://d15m60lsma25jk.cloudfront.net/tktpt?hfijgte" target="_blank">阿波罗网</a> | <a href="https://d3vg08phoazui6.cloudfront.net/Mjpvu?lelkp" target="_blank">干净世界</a> | <a href="https://d27l6dsifacvoi.cloudfront.net/10?qetdpog" target="_blank">退党服务</a> | <a href="https://d1ot7p38i3wmt5.cloudfront.net/Rffqf?aqbrztva" target="_blank">明慧广播</a> | <a href="https://d3bo5docy69ast.cloudfront.net/nw9Vn?xnjjq" target="_blank">传奇时代</a> | <a href="https://d2s9nucg9xc8yr.cloudfront.net/AF9AG?fejprn" target="_blank">新境界影视</a> | <a href="https://d1tvvb2j7fpfrx.cloudfront.net/zqMQA?kywnkkkd" target="_blank">文昭谈论</a> | <a href="https://d2csrn8d5ncbve.cloudfront.net/7?cwbcmlq" target="_blank">明慧</a></p><p><a href="https://dfu0th2rj4x8t.cloudfront.net/9?yaxft" target="_blank">大法</a> | <a href="https://d3twnfu6dd6xpm.cloudfront.net/3?tbpqqdru" target="_blank">新唐人</a> | <a href="https://d15m60lsma25jk.cloudfront.net/obAhT?ctfispq" target="_blank">人民报</a> | <a href="https://d3c3t179l61pwn.cloudfront.net/xXNHu?erqnrzv" target="_blank">放光明</a> | <a href="https://d3d2r098q79b5l.cloudfront.net/5?ircrlnl" target="_blank">新纪元</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/6?vqhvxulh" target="_blank">希望之声</a> | <a href="https://d5tsat6yropq6.cloudfront.net/11?fqoydupix" target="_blank">无界网络</a> | <a href="https://d2sn4gemyo21al.cloudfront.net/Pueji?mlwqmsx" target="_blank">追查国际</a> | <a href="https://d2rum6kyy1zd7y.cloudfront.net/16?ohvzhlu" target="_blank">明慧之窗</a> | <a href="https://d2wf95os3tobj4.cloudfront.net/LdvzZ?mcdtu" target="_blank">细语人生</a> | <a href="https://d3c3t179l61pwn.cloudfront.net/fBn3r?yvkklqu" target="_blank">新世纪影视</a> | <a href="https://d2rq98et8nmaey.cloudfront.net/PUWMb?zrbth" target="_blank">江峰时刻</a> | <a href="https://d29mno3lcgt6u3.cloudfront.net/8?qstbdu" target="_blank">正见</a></p></td></tr>
+<a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="https://github.com/19920513/www/blob/master/README.md?pcwzlda#1" target="_blank">首页</a> | <a href="https://djwddd4nnr0na.cloudfront.net/1?iaarr" target="_blank">动态网</a> | <a href="https://d1ff3ajoaf61nd.cloudfront.net/2?jznak" target="_blank">大纪元</a> | <a href="https://d2n08tj75ohh5.cloudfront.net/4?apjdfyma" target="_blank">看中国</a> | <a href="https://d2tha3bwxphnwp.cloudfront.net/pHh5q?ktkoml" target="_blank">新生网</a> | <a href="https://d259d2wq6kf78s.cloudfront.net/tktpt?yismlh" target="_blank">阿波罗网</a> | <a href="https://d1or6b2roqil0x.cloudfront.net/Mjpvu?sfwye" target="_blank">干净世界</a> | <a href="https://dgk92ykceobaf.cloudfront.net/10?ckvaydz" target="_blank">退党服务</a> | <a href="https://d3vg08phoazui6.cloudfront.net/Rffqf?hpdbif" target="_blank">明慧广播</a> | <a href="https://d377tzsbzf1wvt.cloudfront.net/nw9Vn?wvhgucwsq" target="_blank">传奇时代</a> | <a href="https://d5tsat6yropq6.cloudfront.net/AF9AG?gbvmzhb" target="_blank">新境界影视</a> | <a href="https://d3cacbcgqcawbc.cloudfront.net/zqMQA?sxwzi" target="_blank">文昭谈论</a> | <a href="https://d2cj9ah31kn8fl.cloudfront.net/7?zytmjazs" target="_blank">明慧</a></p><p><a href="https://d3sh8rhxyvin24.cloudfront.net/9?essll" target="_blank">大法</a> | <a href="https://d1u99il8548gs4.cloudfront.net/3?ektrf" target="_blank">新唐人</a> | <a href="https://dicfdkfbqptcm.cloudfront.net/obAhT?xwxfzxvo" target="_blank">人民报</a> | <a href="https://d1qri8o0k49d18.cloudfront.net/xXNHu?wdetn" target="_blank">放光明</a> | <a href="https://d1bfxyb2xiiyyy.cloudfront.net/5?rljursdh" target="_blank">新纪元</a> | <a href="https://d12ogqhrsnt8ma.cloudfront.net/6?kcehcpjb" target="_blank">希望之声</a> | <a href="https://d1tvvb2j7fpfrx.cloudfront.net/11?eyvsrqh" target="_blank">无界网络</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/Pueji?hnugzw" target="_blank">追查国际</a> | <a href="https://d2h2x8lw1kpl69.cloudfront.net/16?avmivy" target="_blank">明慧之窗</a> | <a href="https://dd92z3w2j4w9k.cloudfront.net/LdvzZ?vaxsdeng" target="_blank">细语人生</a> | <a href="https://dylb6p9h9pzya.cloudfront.net/fBn3r?ltplnpit" target="_blank">新世纪影视</a> | <a href="https://dycg1eql8aigr.cloudfront.net/PUWMb?akvqs" target="_blank">江峰时刻</a> | <a href="https://duxu97yt14q37.cloudfront.net/8?krcjrdlwk" target="_blank">正见</a></p></td></tr>
 <tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147296.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2023/09/id14081145-police-arrest-i-e1560978518498-320x200.jpg"><p align="center">中国交换生在犹他州遭绑架 大陆父母收勒索信</p></a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147296.md#1" title="中国交换生在犹他州遭绑架 大陆父母收勒索信""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/09/id14081145-police-arrest-i-e1560978518498-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147302.md#1" title="神韵全球七城同步上演 点燃激情 抚慰心灵""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147303-2312291837082124-320x200.jpg">&nbsp;</a>
@@ -13,11 +13,11 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146761.md#1" title="上海庆圣诞 北京纪念毛 中国出现大撕裂""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/12/id14146762-000_348X2C4-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146720.md#1" title="新防长出炉 将领集体出事 专家析中共内斗""><img width="73" src="https://i.epochtimes.com/assets/uploads/2023/09/id14080656-000_33AN6QZ-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://19920513.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>2分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147275.md#1">公检法法轮功学员及明真相人士向李大师拜年</a><br>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147157.md#1">大陆50行业法轮功学员恭祝李大师新年好</a><br>
-:clock8: <em>45分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147294.md#1">中共反恐双标 以色列驻华大使馆杠上毛宁</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147275.md#1">公检法法轮功学员及明真相人士向李大师拜年</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147157.md#1">大陆50行业法轮功学员恭祝李大师新年好</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147294.md#1">中共反恐双标 以色列驻华大使馆杠上毛宁</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147296.md#1">中国交换生在犹他州遭绑架 大陆父母收勒索信</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147265.md#1">【时事金扫描】俄导弹侵入波兰 新防长藏玄机</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147265.md#1">【时事金扫描】俄导弹侵入波兰 新防长藏玄机</a><br>
 :clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160; :speech_balloon: <br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147301.md#1">华人声援牛腾宇遭领馆威胁 吁美清剿中共势力</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146332.md#1">董军接任国防部长 李尚福下落仍不明</a><br>
@@ -98,13 +98,13 @@
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14142930.md#1">【名家专栏】与中共相关的犯罪团伙贩卖大麻</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141498.md#1">美欧和中共清洁能源保卫战的来龙去脉</a><br>
 <a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142588.md#1">【菁英论坛】最后的收割 中共盯上200万亿民储</a><br>
-<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://dhnwlhazyru7i.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://36.233.220.73/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 49,696</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://d3snni869juclv.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1118.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1216.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/3.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/163.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://d3snni869juclv.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/19920513/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/19920513/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://114.47.69.39/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 49,696</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 424,122,925 人
+!共 424,123,066 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147284.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147288-Unknown2-320x200.jpeg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147284.md#1">控福州公安反人类罪 访民林后勤被“训诫”</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146588.md#1">揭上亿维稳资金去向 原信访干部遭羁押逾一年</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146132.md#1">大陆执业律师因讲真话、支持正义丢工作</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14145039.md#1">广州警方建特殊人员隔离场所 内景如同牢房</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145355.md#1">余文生首次见到律师 谈及儿子时拭泪</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144839.md#1">研究新疆强迫劳动被中共制裁 美公司回应</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147214.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/08/id14059109-GettyImages-1526473009-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147214.md#1">印度商务部：应维持对中国太阳能零件征税</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147075.md#1">【晚间新闻】中共间谍气球使用美国网络通信</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146945.md#1">法拉第未来再度收到纳斯达克退市警告</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146661.md#1">2023年中国逾万家芯片公司消失 暴增90%</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146617.md#1">2023年 中国75家装饰公司倒闭</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146581.md#1">中共极权压制人性 谢金河：香港已失去灵魂</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147294.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147318-GettyImages-1555887696-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147294.md#1">中共反恐双标 以色列驻华大使馆杠上毛宁</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147265.md#1">【时事金扫描】俄导弹侵入波兰 新防长藏玄机</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147146.md#1">为何选董军任国防部长？分析：与其出身有关</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147076.md#1">【全球新闻】中共九名高级将领被罢免 军心动荡</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145729.md#1">【中国禁闻】盘点2023年度十大中国禁闻</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146426.md#1">【环球直击】董军任中共防长 李尚福仍下落不明</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147102.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/04/34dedbd936582b49a16ad196189a2468-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147102.md#1">涉中共体坛腐败 央视前名嘴行贿千万被公诉</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146745.md#1">阴霾笼罩 津蓟高速追尾事故致22车受损8人伤</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146534.md#1">陕西启动重污染应急 机动车限行 地铁瘫痪</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146224.md#1">山西小区百户居民疑中毒 上吐下泻头晕恶心</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146193.md#1">浙江舟山东极岛海域渔船翻船 多人失踪</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145754.md#1">【全球新闻】中国疫情严重 体制内年轻人密集病亡</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147133.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/12/id14147143-0-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147133.md#1">海口渔民钓到200斤石斑鱼 三轮车差点装不下</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14147134.md#1">广西女子实名举报国企党委书记强奸未遂</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146707.md#1">获奖者全是“官” 武汉大学书画大赛被质疑</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14146571.md#1">京东诉阿里“二选一”案一审胜诉 获赔10亿</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/30/n14146704.md#1">江苏连云港18岁男孩跳河20多天仍未找到</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145769.md#1">调查：中国25至29岁年龄段超过一半未婚</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/12/25/n14143693.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2023/10/id14100366-21_PekingUniversitycampus1-320x200.jpg"></a><a href="https://github.com/19920513/djy/blob/master/gb/23/12/25/n14143693.md#1">中共和西方关系紧张 美韩在华留学生骤减</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141818.md#1">台故宫特展 从海出发探索16世纪东西文化交流</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142374.md#1">湖南一高校清退二千多名学生 原因曝光</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141342.md#1">胡洪菘访150余位老兵：中共隐瞒抗战历史真相</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141341.md#1">2024年世界大学前十排名 美国占七</a><br><a href="https://github.com/19920513/djy/blob/master/gb/23/12/19/n14139195.md#1">迎接2024龙年 中华民国总统府贺年卡亮相</a><br><br><p align="center"><a href="https://github.com/19920513/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14062148.md#1">中国疫情又起 法轮功创始人：针对共产党</a><br>
