--- a/gb/12/1/24/n3494564.md
+++ b/gb/12/1/24/n3494564.md
@@ -171,17 +171,17 @@
 <hr size=1>四川德阳大法全体大法弟子叩拜师尊新年快乐！</B></p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/12/1/22/n3493576.md#1">全球法轮功学员和各界给李洪志大师拜年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/12/1/23/n3493725.md#1">华北法轮功学员恭祝李洪志大师新年快乐（137条）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/12/1/23/n3493748.md#1">东北法轮功学员恭祝李洪志大师过年好（146条）</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/12/1/23/n3493802.md#1">贺卡集锦（一）：恭祝李洪志大师新年好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">屏蔽露营 6人防风雨帐篷67%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：家庭智能守护小卫士 半价抱回家</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/11/19/n10862316.md#1" target="_blank">刘晓：祠堂被毁 不孝子孙愧对先祖</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/13/n11256153.md#1" target="_blank">留守女孩的命运转变</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/5/14/n11256379.md#1" target="_blank">观雨堂主：历史并未忘记</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/7/15/n11385414.md#1" target="_blank">20年前 澳洲西人为法轮功赴京上访（下）</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/8/n14132234.md#1">人身有多难得？聊斋中的轮回故事</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/20/n14119976.md#1">雨霖铃?李克强之死</a></li>
